# inventory-management-system

./: .gitignore  IMS-ER.mmd  README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
core/: security.py
routers/: auth.py  categories.py  customers.py  inventory.py  products.py  purchase_orders.py  sales_orders.py  stock_adjustments.py  stock_transfers.py  vendors.py  warehouses.py
schemas/: __init__.py  orders.py  transfers.py
services/: inventory_service.py  order_service.py  product_service.py
